tried to fix an overflow problem

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     background-color: rgb(233, 230, 230); 
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;  
-    overflow: hidden;
+    overflow-x: hidden;
 }
 /* Navigation bar */
 nav a {
